Log Output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-app-deployment
  labels:
    app: log-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-app
  template:
    metadata:
      labels:
        app: log-app
    spec:
      volumes:
        - name: shared-image
          emptyDir: {}
        - name: information-image
          configMap:
            name: log-output-configmap
            items:
            - key: "information.txt"
              path: "information.txt"
      containers:
        - name: log-app-write
          image: AUTHOR/IMAGE_WRITE
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
        - name: log-app-read
          image: AUTHOR/IMAGE_READ
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
            - name: information-image
              mountPath: /usr/src/app/information
