Log Output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: log-app-svc
spec:
  type: NodePort
  selector:
    app: log-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 9090
